[package]
name = "puzzle8"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["full"] }

[dependencies.gtk]
package = "gtk4"
version = "0.9.5"
features = ["v4_14"]
optional = true

[features]
default = ["gui", "astar"]
gui = ["dep:gtk"]
tui = []
astar = []
bfs = []
dfs = []
